# pylene

./: .clang-format  .gitignore  .gitlab-ci.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  README.md  bug.tif  compile_commands.json  conanfile.py  conanfile.txt  package-conan.py  traces.txt
apps/: CMakeLists.txt
apps/attributes/: CMakeLists.txt  MSER-cli.cpp  MSER-patternspec-cli.cpp  MSER.hpp  MSERArgparser.cpp  MSERArgparser.hpp  argparser.hpp  attributes.cpp  attributes.hpp  cMSER.hpp  cMeaningFullNess.hpp  circularity-cli.cpp  circularity.cpp  circularity.hpp  curvature.cpp  curvature.hpp  gradient_magnitude-cli.cpp  gradient_magnitude-patternspec.cpp  gradient_magnitude.hpp  meaningfullness-cli.cpp  meaningfullness-patternspec-cli.cpp  meaningfullness.hpp  meaningfullnessArgparser.cpp  meaningfullnessArgparser.hpp  stat.cpp
apps/clattice/: CMakeLists.txt  clattice.cpp  cuts.hpp  export.hpp  make_graph.hpp  relation.hpp  shape.hpp
apps/distancebased/: compute_tree_distance.hpp  grainfilter_distancebased.cpp
apps/g2/: CMakeLists.txt  Makefile  compute_ctos-cli.cpp  compute_ctos-demo.cpp  compute_ctos.cpp  compute_ctos.hpp  compute_ctos.hxx  compute_g2.cpp  compute_g2.hpp  g2-maxdepth.cpp  g2-maxtree.cpp  g2-no-overlap.cpp  g2-no-overlap2.cpp  g2.cpp  g2.hpp  reconstruct.hpp  remove_parent_relation.hpp  routines.cpp  routines.hpp  satmaxtree-cli.cpp  satmaxtree.cpp  satmaxtree.hpp  types.hpp
apps/gpce.2022/: CMakeLists.txt  labelize.cpp  labelize.hpp  labelize_serial.cpp  labelize_view.cpp
apps/hierachical_seg-gui/: CMakeLists.txt  brush.cpp  brush.hpp  hierachical_seg-cli.cpp  hierachical_seg-gui.cpp  supervised-cli.cpp
apps/hyperspec/: CMakeLists.txt  profiles.hpp  profiles_from_marginal_tos.cpp  profiles_from_tos.cpp
apps/icip.2022/: CMakeLists.txt  labelize.cpp
apps/imview/: CMakeLists.txt  imview.cpp
apps/maxtree_comparison/: CMakeLists.txt  bench_maxtree_algorithm.hpp  bench_parallel_hqueue.cpp  bench_parallel_pqueue.cpp  bench_parallel_pqueue_2.cpp  bench_parallel_ufind.cpp  bench_parallel_ufind_line.cpp  bench_parallel_ufindrank.cpp  bench_serial_hqueue.cpp  bench_serial_najman.cpp  bench_serial_pqueue.cpp  bench_serial_ufind.cpp  bench_serial_ufindrank.cpp  canonize.hpp  filter-cli.cpp  maxtree-cli.cpp  maxtree1d.hpp  maxtree_hqueue.hpp  maxtree_hqueue_parallel.hpp  maxtree_najman.hpp  maxtree_node.hpp  maxtree_pqueue.hpp  maxtree_pqueue_2.hpp  maxtree_pqueue_parallel.hpp  maxtree_routines.hpp  maxtree_ufind.hpp  maxtree_ufind_parallel.hpp  maxtree_ufindrank.hpp  maxtree_ufindrank_parallel.hpp  merge_tree.hpp
apps/misc/: CMakeLists.txt  compute_depth.cpp  grain_filter_color.cpp  ppm_grain_filter_marginal.cpp  print_tos_stat.cpp  psnr.cpp  reconstruct_from_tree.cpp
apps/mumford_shah_on_tree/: CMakeLists.txt  mumford_shah_on_tree.cpp  mumford_shah_on_tree.hpp  mumford_shah_on_tree_full.cpp  mumford_shah_on_tree_saliency.cpp
apps/myriam/: CMakeLists.txt  getquad-cli.cpp  getquad.cpp  getquad.hpp
apps/pygui/: Makefile  filtertree.cpp  gui.py  loadtree.cpp  loadtree.hpp  tosgui.cpp  tosgui.hpp
apps/qcm/: Makefile  qcm.cpp  qcm.py
apps/saliency/: CMakeLists.txt  closure.hpp  dispsaliency.cpp  dispsaliency.hpp  extinction.hpp  saliency.cpp  saliency.hpp
apps/simplification/: CMakeLists.txt  simplify.hpp  simplify_cluminance.cpp  simplify_color.cpp  simplify_gray.cpp
apps/smartdoc/: CMakeLists.txt  analyse_xml.py  border_detection.cpp  border_detection.hpp  challenge2.cpp  compare_xml.py  export.cpp  export.hpp  main.cpp  main2.cpp  plot_xml.py  prettyview.cpp  smartdoc-cli.cpp  smartdoc.cpp  smartdoc.hpp  unhomo.cpp  unhomo.hpp  video_tools.cpp  video_tools.hh
apps/supervised-gui/: CMakeLists.txt  automatic.cpp  brush.cpp  brush.hpp  compute_distance.hpp  constants.hpp  generate_res.cpp  myheap.hpp  nettoyage.cpp  supervised-cli-multi.cpp  supervised-cli.cpp  supervised-gui-3c.cpp
apps/tests/: CMakeLists.txt
apps/theo/: CMakeLists.txt  ctos_grainfilter.cpp
apps/tip.2019-2020/: CMakeLists.txt  blur.cpp  gen_figs.cpp  print_se.cpp
apps/tos/: Kinterpolate.hpp  Makefile  addborder.hpp  colorToSGrad.cpp  colorToSGrad.hpp  compute_attribute.hpp  croutines.hpp  curvature.cpp  curvature.hpp  dijkstra.cpp  display_tos.cpp  distances.cpp  gradient.cpp  gradient.hpp  grainfilter.cpp  k12k0.cpp  lexico_grainfilter.cpp  libtos.cpp  libtos.hpp  marginal_cf.cpp  marginalfilter.cpp  mumford_shah.hpp  objdetection.cpp  objdetection.hpp  objdetection_gray.cpp  pgm_objdetection.cpp  pgm_objdetection_mser.cpp  ppm_objdetection.cpp  ppm_objdetection_mser.cpp  rgbgrainfilter.cpp  routines.cpp  routines.hpp  set_mean_on_nodes.hpp  shape_similarity.hpp  simplify.cpp  (+6 more)
bench/: Aerial_view_of_Olbia.jpg.md5  BDCN_pretrain_best_val.png.md5  BMAlgorithms.cpp  BMAlgorithms_main.cpp  BMAlphaTree.cpp  BMBufferPrimitives.cpp  BMDilation.cpp  BMErosion.cpp  BMErosion.hpp  BMErosion_main.cpp  BMMorphers.cpp  BMMorphers_main.cpp  BMMorphoBase.cpp  BMMorphoBaseRef.cpp  BMMorphoMaxtree.cpp  BMMorphoTos.cpp  BMNeighborhood.cpp  BMNeighborhood_main.cpp  BMNeighborhood_standalone.cpp  BMReference.cpp  BMReference_Linear.cpp  BMReference_Linear_Reversed.cpp  BMReference_Linear_main.cpp  BMReference_Linear_main.cpp~409e542c581993626cd10e9198aa75cf356efac2  BMReference_Neighborhood.cpp  BMReference_Neighborhood_main.cpp  BMReference_Neighborhood_test.cpp  BMReference_main.cpp  BMRotation.cpp  BMSaliency.cpp  BMWatershedHierarchy.cpp  BM_gpce2022_rebutal.cpp  BenchmarkMacros.cmake  CMakeLists.txt  Readme.md  Space1_20MB.jpg.md5  generator.hpp  plotbench.py  plotbench2.py  range2d.hpp  (+6 more)
cli/: CMakeLists.txt  area_close.cpp  area_fast_close.cpp  closing_by_reconstruction.cpp  decompose_channels.cpp  dilate.cpp  grain_filter.cpp  lab2rgb.cpp  leveling.cpp  recompose_channels.cpp  rgb2lab.cpp
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile
pybind/: CMakeLists.txt  README
pylene/: CMakeLists.txt  PyleneConfig.cmake.in
pylene-python/: CMakeLists.txt
tests/: CMakeLists.txt  bench_iterator.cpp  bench_iterator1.cpp  bench_zip_iterator.cpp  helpers.hpp  ndimage.cpp  test.hpp
(+2123 files in other folders)
