add_executable(area_close area_close.cpp)
add_executable(closing_by_reconstruction closing_by_reconstruction.cpp)
add_executable(leveling leveling.cpp)
add_executable(area_fast_close area_fast_close.cpp)
add_executable(grain_filter grain_filter.cpp)
add_executable(decompose_channels decompose_channels.cpp)
add_executable(rgb2lab rgb2lab.cpp)
add_executable(lab2rgb lab2rgb.cpp)

target_link_libraries(area_close -lfreeimage)
target_link_libraries(area_fast_close -lfreeimage)
target_link_libraries(decompose_channels -lfreeimage)
target_link_libraries(grain_filter -lfreeimage)
target_link_libraries(closing_by_reconstruction -lfreeimage)
target_link_libraries(leveling -lfreeimage)
target_link_libraries(rgb2lab -lfreeimage)
target_link_libraries(lab2rgb -lfreeimage)

